--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "pkg-name",
+	"name": "keyboard-simulator",
 	"description": "Doing stuff.",
 	"version": "0.0.0",
 	"license": "MIT",
 	"private": true,
 	"main": "./src/index.ts",
-	"module": "./dist/esm/pkg-name.esm.js",
-	"browser": "./dist/browser/pkg-name.min.js",
-	"types": "./dist/esm/pkg-name.esm.d.ts",
+	"module": "./dist/esm/keyboard-simulator.esm.js",
+	"browser": "./dist/browser/keyboard-simulator.min.js",
+	"types": "./dist/esm/keyboard-simulator.esm.d.ts",
 	"files": [
 		"dist",
 		"src"
@@ -18,8 +18,8 @@
 		"prebuild": "rm -rf ./dist",
 		"build": "rollup --config rollup.prod.config.js --bundleConfigAsCjs",
 		"postbuild": "rm -rf ./dist/esm/temp-dts",
-		"test": "vitest run ./tests/index.spec.ts",
-		"test:watch": "vitest watch ./tests/index.spec.ts",
+		"test": "vitest run",
+		"test:watch": "vitest watch",
 		"lint": "npm run check:lint",
 		"checks": "npm run check:all",
 		"types": "npm run check:types",
@@ -32,26 +32,25 @@
 		"prepublishOnly": "npm run check:all"
 	},
 	"devDependencies": {
-		"@rollup/plugin-node-resolve": "15.2.3",
       "@rollup/plugin-terser": "0.4.4",
       "@rollup/plugin-typescript": "11.1.6",
       "@types/jsdom": "21.1.6",
-      "@typescript-eslint/eslint-plugin": "6.19.0",
-      "@typescript-eslint/parser": "6.19.0",
-      "@vitest/coverage-v8": "1.2.1",
-      "eslint": "8.56.0",
+      "@typescript-eslint/eslint-plugin": "7.1.0",
+      "@typescript-eslint/parser": "7.1.0",
+      "@vitest/coverage-v8": "1.3.1",
+      "eslint": "8.57.0",
       "jsdom": "24.0.0",
-      "rollup": "4.9.6",
+      "rollup": "4.12.0",
       "rollup-plugin-dts": "6.1.0",
       "tslib": "2.6.2",
       "typescript": "5.3.3",
-      "vitest": "1.2.1"
+      "vitest": "1.3.1"
 	},
 	"keywords": [],
-	"homepage": "https://github.com/taitulism/pkg-name#readme",
+	"homepage": "https://github.com/taitulism/keyboard-simulator#readme",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/taitulism/pkg-name.git"
+		"url": "https://github.com/taitulism/keyboard-simulator.git"
 	},
 	"author": {
 		"name": "Itai Tenenbaum",
