--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"main": "./src/index.ts",
 	"module": "./dist/esm/keyboard-simulator.esm.js",
 	"browser": "./dist/browser/keyboard-simulator.min.js",
+	"type": "module",
 	"types": "./dist/esm/keyboard-simulator.esm.d.ts",
 	"files": [
 		"dist",
@@ -31,18 +32,21 @@
 		"prepublishOnly": "npm run check:all"
 	},
 	"devDependencies": {
+		"@eslint/js": "9.20.0",
 		"@rollup/plugin-terser": "0.4.4",
 		"@rollup/plugin-typescript": "12.1.2",
 		"@types/jsdom": "21.1.7",
 		"@typescript-eslint/eslint-plugin": "8.24.1",
 		"@typescript-eslint/parser": "8.24.1",
 		"@vitest/coverage-v8": "3.0.5",
-		"eslint": "8.57.0",
+		"eslint": "9.20.1",
+		"globals": "15.15.0",
 		"jsdom": "26.0.0",
 		"rollup": "4.34.8",
 		"rollup-plugin-dts": "6.1.1",
 		"tslib": "2.8.1",
 		"typescript": "5.7.3",
+		"typescript-eslint": "8.24.1",
 		"vitest": "3.0.5"
 	},
 	"homepage": "https://github.com/taitulism/keyboard-simulator#readme",
