--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
 		"postversion": "git push && git push --tags",
 		"prepublishOnly": "npm run check:all"
 	},
+	"engines": {
+		"node": ">=20.0.0"
+	},
 	"devDependencies": {
 		"@eslint/js": "9.37.0",
 		"@rollup/plugin-terser": "0.4.4",
